Make sure the create-menu doesn't trigger scrollbars.

--- a/webapp/theme/theme.less
+++ b/webapp/theme/theme.less
@@ -56,6 +56,7 @@ html, body {
     overflow:auto;
     padding-bottom: (@footerHeight + 1);
     position: relative;
+    min-height: 30rem; /* make sure the create-menu doesn't trigger scrollbars */
 }
 
 html.iframe #page {
